yml/ai-img.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-img
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-img
  template:
    metadata:
      labels:
        app: ai-img
    spec:
      containers:
      - name: ai-img
        image: avramstefan/facysent:1.5
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: ai-img
spec:
  selector:
    app: ai-img
  ports:
  - port: 5001
    targetPort: 5001
