yml/project-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-api
  template:
    metadata:
      labels:
        app: project-api
    spec:
      containers:
      - name: project-api
        image: avramstefan/facyapp:1.4
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: project-api
spec:
  selector:
    app: project-api
  ports:
  - port: 5000
    targetPort: 5000
