yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-entrypoint
  labels:
    name: project-entrypoint
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
  - http: 
      paths:
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: project-api
            port: 
              number: 5000
      - pathType: Prefix
        path: /ai-img/
        backend:
          service:
            name: ai-img
            port:
              number: 5001
